placing a whitespace by default solves this

--- a/itembox.css
+++ b/itembox.css
@@ -41,10 +41,6 @@ body { background-color: #222; color: #e6e6e6}
 	width: auto;
 }
 
-:is(.itembox, .itembox-container) + :is(.itembox, .itembox-container) { /* consecutive itemboxes */
-	margin-left: 5px; /* gap between them */
-}
-
 .itembox .level {
 	place-self: start; /* placed top-left */
 	top: -3px; /* pull upward */
